# SimplePythonStuff

./: .gitignore  Dragon.py  DrawCircle.py  HelloWorld(GamingBook).py  Jokes.py  PrimeNumberGenerator.py  PythonTips.py  README.md  TempConverter.py  __init__.py  collatzconjecture.py  corridorpuzzle.py  d10_d20.html  d6.html  d6_d6.html  fizzbuzz_August2019.py  image_changer.py  lunch_randomizer.py  magic_8_ball.py  tempconverter.py  test_tempconverter.py
Baby'sFirstDataScience/: .gitignore  FirstNotebook.ipynb  README.md  death_valley_highs_lows.py  dice_visual.py  dice_visual_more_sides.py  die.py  die_visual.py  durham_high_lows.py  eq_explore_data.py  eq_world_map.py  global_earthquakes.html  hn_article.py  hn_submissions.py  matplotlib_squares_visualization.py  python_repos.html  python_repos.py  python_repos_visual.py  random_walk.py  randomwalk_visual.py  scatter_squares.py  show_color_scales.py  sitka_high_lows.py  sitka_highs.py
Baby'sFirstDjango/: Procfile  package.json  requirements.txt
Baby'sFirstPyGame/: README.md  alien.py  alien_invasion.py  bullet.py  settings.py  ship.py
CondaPlugins/: README.md
CondaPlugins/random_walk_conda_plugin/: pyproject.toml  random_walk.py
CondaPlugins/rust_plugins/chordcli/: Cargo.toml  chord_cli_rust.py  pyproject.toml
CondaPlugins/rust_plugins/chordcli/src/: lib.rs
CondaPlugins/rust_plugins/guessing_game/: Cargo.toml  guessing_game_rust.py  pyproject.toml
CondaPlugins/rust_plugins/guessing_game/src/: lib.rs
CustomAnsibleModules/: README.md  ansible.cfg  practice_playbook.yml
Games/: DangerRooms.py  Dragon.py  (+8 more)
(+65 files in other folders)
