[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "guessing-game"
version = "1.0"
description = "A subcommand that invokes a guessing game"
requires-python = ">=3.7"
dependencies = ["conda", "maturin"]

[tools.setuptools]
py_modules=["guessing-game"]

[project.entry-points.conda]
guessing-game = "guessing_game_rust"
